--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Hello App</h1> 
-        <form action="http://localhost:3000/post">
+        <form action="http://localhost:3000/register">
             <ul>
                 <li>
                     <label for="name">Name: </label>
