feat[register]: add frontend registration
- add registration route and html
- add script to make POST request to backend
- add head template
- add static files folder
- add login route for redirect after register success

--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -1,79 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>TEST</title>
-    </head>
-    <body>
-        <h1>Hello App</h1> 
-        <form action="http://localhost:3000/register">
-            <ul>
-                <li>
-                    <label for="name">Name: </label>
-                    <input type="text" name="name" id="name">
-                </li>
-                <li>
-                    <label for="email">Email: </label>
-                    <input type="email" name="email" id="email">
-                </li>
-                <li>
-                    <label for="password">Password: </label>
-                    <input type="password" name="password" id="password">
-                </li>
-                <li>
-                    <label for="confirmPassword">Confirm Password: </label>
-                    <input type="password" name="confirmPassword" id="confirmPassword">
-                </li>
-            </ul>
-            <button type="submit">Submit</button>
-        </form>
-        <script>
-           const form = document.querySelector("form")
-
-           form.addEventListener("submit", handleFormSubmit);
-
-           async function handleFormSubmit(event) {
-
-               event.preventDefault();
-
-               const form = event.currentTarget
-
-               const url = form.action;
-
-               try {
-                   const formData = new FormData(form)
-                   const responseData = await postFormDataAsJson({url, formData})
-
-                   console.log(responseData)
-               } catch(error) {
-                    console.error(error)
-               }
-           }
-
-           async function postFormDataAsJson({url, formData}) {
-
-               const plainFormData = Object.fromEntries(formData.entries());
-               const formDataJsonString = JSON.stringify(plainFormData);
-
-               const fetchOptions = {
-                   method: "POST",
-                   mode: "cors",
-                   headers: {
-                       "Content-Type": "application/json",
-                   },
-                   body: formDataJsonString,
-               };
-
-               const response = await fetch(url, fetchOptions);
-
-               if (!response.ok) {
-                   const errorMessage = await response.text();
-                   throw new Error(errorMessage)
-               };
-
-               return response.json();
-           }
-        </script>
-    </body>
+    <%- include("head.html") %>
+  <body>
+    <h1>Hello App</h1>
+  </body>
 </html>
