--- a/frontend/views/register.html
+++ b/frontend/views/register.html
@@ -3,7 +3,7 @@
     <%- include("head.html") %>
   <body>
     <h1>Hello App</h1>
-    <form action="http://localhost:3000/register">
+    <form action="http://localhost:3000/register" data-redirect="/login">
       <ul>
         <li>
           <label for="name">Name: </label>
