feat[header]: add dynamic header based on user logged in status

--- a/frontend/views/head.html
+++ b/frontend/views/head.html
@@ -2,5 +2,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/style.css" rel="stylesheet">
+    <script src="tokenScript.js" defer></script>
     <title>Blogger</title>
   </head>
