--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <%- include("head.html") %>
   <body>
-    <h1>Hello App</h1>
+      <%- include("header.html") %>
+    <h1>Blogger</h1>
+    <div id="container">
+</div>
+    <script src="postsScript.js" defer> </script>
   </body>
 </html>
