feat[header]: include header in register and login pages

--- a/frontend/views/register.html
+++ b/frontend/views/register.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <%- include("head.html") %>
   <body>
-    <h1>Hello App</h1>
+      <%- include("header.html") %>
+    <h1>Register</h1>
     <form action="http://localhost:3000/register" data-redirect="/login">
       <ul>
         <li>
