--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <%- include("head.html") %>
   <body>
+      <%- include("header.html") %>
     <h1>login</h1>
     <form action="http://localhost:3000/login" data-redirect="/">
       <ul>
