--- a/management/views/add.html
+++ b/management/views/add.html
@@ -9,14 +9,17 @@
         <li>
             <label for="title">Title: </label>
             <input type="text" id="title" name="title">
+            <span></span>
         </li>
         <li>
             <label for="content">Content: </label>
             <input type="textarea" id="content" name="content" rows="10" cols="10">
+            <span></span>
         </li>
         <li>
             <label for="publish">Publish: </label>
             <input type="checkbox" id="publish" name="publish">
+            <span></span>
         </li>
        </ul>
        <button type="submit">Submit</button>
