feat[posts]: fetch and display posts
- create controller to retrieve posts from database
- display posts on frontend apps

--- a/management/views/index.html
+++ b/management/views/index.html
@@ -4,7 +4,7 @@
   <body>
     <%- include("header.html") %>
     <a href="add">Add new post</a>
-    <div id="container"></div>
+    <ul id="container"></ul>
 
     <script src="postScript.js" defer></script>
   </body>
