fix: add javascript files to templates using relative paths

--- a/management/views/add.html
+++ b/management/views/add.html
@@ -24,7 +24,8 @@
        </ul>
        <button type="submit">Submit</button>
    </form>
-   <script src="postPostScript.js" defer></script>
+    <script src="tokenScript.js" defer></script>
+   <script src="addScript.js" defer></script>
     </body>
 </html>
 
