--- a/management/views/index.html
+++ b/management/views/index.html
@@ -3,9 +3,10 @@
   <%- include("head.html") %>
   <body>
     <%- include("header.html") %>
-    <a href="add">Add new post</a>
+    <a href="post">Add new post</a>
     <ul id="container"></ul>
-
-    <script src="postScript.js" defer></script>
+    <script src="tokenScript.js" defer></script>
+    <script src="postGet.js" defer></script>
+    <script src="indexScript.js" defer></script>
   </body>
 </html>
