--- a/management/views/login.html
+++ b/management/views/login.html
@@ -18,6 +18,7 @@
       </ul>
       <button type="submit">Submit</button>
     </form>
+    <script src="tokenScript.js" defer></script>
     <script src="userScript.js" defer></script>
   </body>
 </html>
