refactor: split js files into smaller modules for use in different views

--- a/management/views/add.html
+++ b/management/views/add.html
@@ -25,7 +25,8 @@
        <button type="submit">Submit</button>
    </form>
     <script src="tokenScript.js" defer></script>
-   <script src="addScript.js" defer></script>
+   <script src="postForm.js" defer></script>
+   <script src="handleForm.js" defer></script>
     </body>
 </html>
 
