--- a/management/views/edit.html
+++ b/management/views/edit.html
@@ -4,8 +4,29 @@
     <body>
         <%- include("header.html") %>
    <h1>Edit</h1> 
+   <form action="http://localhost:3000/post">
+       <ul>
+        <li>
+            <label for="title">Title: </label>
+            <input type="text" id="title" name="title">
+            <span></span>
+        </li>
+        <li>
+            <label for="content">Content: </label>
+            <input type="textarea" id="content" name="content" rows="10" cols="10">
+            <span></span>
+        </li>
+        <li>
+            <label for="publish">Publish: </label>
+            <input type="checkbox" id="publish" name="publish">
+            <span></span>
+        </li>
+       </ul>
+       <button type="submit">Submit</button>
+   </form>
    <script src="../tokenScript.js" defer></script>
    <script src="../postGet.js" defer></script>
    <script src="../editScript.js" defer></script>
+   <script src="../handleForm.js" defer></script>
     </body>
 </html>
