feat[post]: add put request to management app to update a post

--- a/management/views/edit.html
+++ b/management/views/edit.html
@@ -4,7 +4,7 @@
     <body>
         <%- include("header.html") %>
    <h1>Edit</h1> 
-   <form action="http://localhost:3000/post">
+   <form >
        <ul>
         <li>
             <label for="title">Title: </label>
@@ -28,5 +28,6 @@
    <script src="../postGet.js" defer></script>
    <script src="../editScript.js" defer></script>
    <script src="../handleForm.js" defer></script>
+   <script src="../putForm.js" defer></script>
     </body>
 </html>
