feat[delete]: send delete request to backend

--- a/management/views/index.html
+++ b/management/views/index.html
@@ -8,5 +8,7 @@
     <script src="tokenScript.js" defer></script>
     <script src="postGet.js" defer></script>
     <script src="indexScript.js" defer></script>
+    <script src="handleForm.js" defer></script>
+    <script src="deletePost.js" defer></script>
   </body>
 </html>
