feat: display comments for each post

--- a/frontend/views/post.html
+++ b/frontend/views/post.html
@@ -3,6 +3,8 @@
   <%- include("head.html") %>
   <body>
   <%- include("header.html") %>
+  <div id="post"> </div>
+  <div id="comments"> </div>
     <script src="getPost.js" defer></script>
   </body>
 </html>
