feat[comment]: fetch comment from backend

--- a/frontend/views/comment.html
+++ b/frontend/views/comment.html
@@ -3,10 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
-        <link href="css/style.css" rel="stylesheet">
+    <script src="../tokenScript.js" defer></script>
+        <title>Blogger</title>
     </head>
+    <%- include("header.html") %>
     <body>
+        <div id="container">
+            
+        </div>
    <h1>Comment Editor</h1> 
+   <script src="../getComment.js" defer></script>
     </body>
 </html>
