feat[comment]: populate edit form with comment values

--- a/frontend/views/comment.html
+++ b/frontend/views/comment.html
@@ -8,9 +8,11 @@
     </head>
     <%- include("header.html") %>
     <body>
-        <div id="container">
-            
-        </div>
+        <form>
+            <label for="comment">Edit comment</label>
+            <textarea rows="" cols="" id="comment"></textarea>
+            <button type="submit">Submit</button>
+        </form>
    <h1>Comment Editor</h1> 
    <script src="../getComment.js" defer></script>
     </body>
