feat[comment]: send request to edit comment to backend

--- a/frontend/views/comment.html
+++ b/frontend/views/comment.html
@@ -8,7 +8,7 @@
     </head>
     <%- include("header.html") %>
     <body>
-        <form>
+        <form action="http://localhost:3000/post">
             <label for="comment">Edit comment</label>
             <textarea rows="" cols="" id="comment"></textarea>
             <button type="submit">Submit</button>
