feat[comment]: update comment in database

--- a/frontend/views/comment.html
+++ b/frontend/views/comment.html
@@ -10,7 +10,7 @@
     <body>
         <form action="http://localhost:3000/post">
             <label for="comment">Edit comment</label>
-            <textarea rows="" cols="" id="comment"></textarea>
+            <textarea rows="" cols="" id="comment" name="comment"></textarea>
             <button type="submit">Submit</button>
         </form>
    <h1>Comment Editor</h1> 
